<resources>
    <string name="app_name">Flooring Calculator</string>
    <string name="boxes">Calculate how much product you need</string>
    <string name="enterMeasure">Measure in SqFt:</string>
    <string name="boxSize">Coverage of one box:</string>
    <string name="price">Price of one box:</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="blindCut">Let`s cut some blinds</string>
    <string name="initialSizeBlind">Initial size of Blind:</string>
    <string name="finalSizeBlind">Final size of Blind:</string>
    <string name="cutType">It is one or two side cut?</string>

</resources>
