<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlindCutting"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:shadowDx="3.0"
        android:shadowDy="3.0"
        android:shadowRadius="2.0"
        android:shadowColor="@color/borders"
        android:text="Let`s cut some blinds! "
        android:textColor="@color/white"
        android:paddingTop="20sp"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        >
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/initialSizeBlind"
            android:layout_marginRight="40dp"
            android:layout_weight="1"


            />

        <EditText
            android:id="@+id/intialBlind"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:inputType="numberDecimal"

            />

    </LinearLayout>
    <LinearLayout
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginRight="50dp"
    android:layout_marginLeft="20dp"
    >
    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:text="@string/finalSizeBlind"
        android:layout_marginRight="40dp"
        android:layout_weight="1"

        />

    <EditText

        android:id="@+id/finalBlind"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:inputType="numberDecimal"
        />


</LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="20dp"
        >
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/cutType"
            android:layout_marginRight="40dp"
            android:layout_weight="1.4"

            />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Two side cut" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:gravity="center">



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculateCut"
            android:text="@string/calculate"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/resetBlind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_weight="1"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/outputBlind"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/outputFraction"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"

        />
</LinearLayout>